--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -151,6 +151,8 @@ nav:
         - api/databricks/group.md
         - api/databricks/permission.md
         - ServicePrincipal: api/databricks/serviceprincipal.md
+        - api/databricks/secret.md
+        - SecretScope: api/databricks/secretscope.md
         - api/databricks/user.md
       - Grants: api/grants.md
     - Spark: api/models.md
