--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,7 +88,7 @@ plugins:
             group_by_category: true
             heading_level: 2
             inherited_members: false  # this only apply to methods and properties, not to pydantic fields
-#            members_order: source
+            members_order: source
             merge_init_into_class: true
             separate_signature: false
             show_category_heading: true
@@ -159,6 +159,7 @@ nav:
           - api/sql/catalog.md
           - api/sql/schema.md
           - api/sql/table.md
+          - TableBuilder: api/sql/tablebuilder.md
           - api/sql/volume.md
     - Spark: api/models.md
     - DLT: api/models.md
