--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,13 +82,13 @@ plugins:
           options:
             docstring_options:
               ignore_init_summary: true
-            docstring_section_style: table
+            docstring_section_style: spacy
             docstring_style: numpy
             filters: ["!^_"]
             group_by_category: true
             heading_level: 2
             inherited_members: false  # this only apply to methods and properties, not to pydantic fields
-#            members_order: source
+            members_order: source
             merge_init_into_class: true
             separate_signature: false
             show_category_heading: true
@@ -151,7 +151,20 @@ nav:
         - api/databricks/group.md
         - api/databricks/permission.md
         - ServicePrincipal: api/databricks/serviceprincipal.md
+        - api/databricks/secret.md
+        - SecretScope: api/databricks/secretscope.md
         - api/databricks/user.md
+      - Grants: api/grants.md
+      - SQL:
+          - api/sql/catalog.md
+          - api/sql/column.md
+          - api/sql/schema.md
+          - api/sql/table.md
+          - TableBuilder: api/sql/tablebuilder.md
+          - TableAggregation: api/sql/tableaggregation.md
+          - TableJoin: api/sql/tablejoin.md
+          - TableWindowFilter: api/sql/tablewindowfilter.md
+          - api/sql/volume.md
     - Spark: api/models.md
     - DLT: api/models.md
   - Changelog: changelog.md
