--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -159,6 +159,7 @@ nav:
         - api/databricks/secret.md
         - SecretScope: api/databricks/secretscope.md
         - api/databricks/user.md
+        - api/databricks/workspacefile.md
       - Grants: api/grants.md
       - SQL:
           - api/sql/catalog.md
