--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -186,5 +186,6 @@ nav:
         - roundp: api/spark/functions/roundp.md
         - string_split: api/spark/functions/string_split.md
         - uuid: api/spark/functions/uuid.md
-    - DLT: api/models.md
+    - DLT:
+      - api/dlt/utilities.md
   - Changelog: changelog.md
