--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # PyCharm configuration
 **/.idea/**
 
-# Seecret values
+# Secret values
 secrets/*.*
 
 # --------------------------------------------------------------------------- #
