--- a/tests/stack.yaml
+++ b/tests/stack.yaml
@@ -3,6 +3,9 @@ config:
   databricks:host: ${var.DATABRICKS_HOST}
   databricks:token: ${var.DATABRICKS_TOKEN}
 resources:
+  providers:
+    - host: ${var.DATABRICKS_HOST}
+      token: ${var.DATABRICKS_TOKEN}
   pipelines:
     - resource_name: pl-custom-name
       name: pl-stock-prices-ut-stack
@@ -14,6 +17,8 @@ resources:
           permission_level: CAN_VIEW
         - group_name: role-engineers
           permission_level: CAN_RUN
+      options:
+        provider: ${resources.databricks-provider}
   jobs:
     - name: job-stock-prices-ut-stack
       clusters:
