--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 # PyCharm configuration
 **/.idea/**
 
-# Seecret values
+# Secret values
 secrets/*.*
 
 # --------------------------------------------------------------------------- #
@@ -36,6 +36,8 @@ htmlcov
 
 # Test data
 tests/data
+tests/Pulumi.yaml
+tests/tmp*
 
 # Test results
 junit
