--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ classifiers = [
 dynamic = ["version"]
 dependencies = [
 #    "databricks-sdk",
-    "jsonref",
+#    "jsonref",
     "planck",
     "pulumi",
     "pulumi_databricks",
@@ -44,6 +44,7 @@ dependencies = [
     "pyyaml",
     "pydantic>=2",
     "settus",
+    "typer[all]",
 ]
 
 [project.optional-dependencies]
@@ -92,6 +93,10 @@ include = ["laktory*"]
 
 [tool.setuptools.dynamic]
 version = {attr = "laktory._version.VERSION"}
+
+# CLI
+[project.scripts]
+laktory = "laktory.cli.app:app"
 
 [tool.ruff]
 #line-length = 120
