--- a/tests/stack.yaml
+++ b/tests/stack.yaml
@@ -1,5 +1,5 @@
 name: unit-testing
-engine: pulumi
+backend: pulumi
 config:
   databricks:host: ${var.DATABRICKS_HOST}
   databricks:token: ${var.DATABRICKS_TOKEN}
