--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -117,15 +117,18 @@ nav:
 
   - Concepts:
     - Design Principles: concepts/design.md
-    - Models: concepts/models.md
-    - Data Event: concepts/dataevent.md
-#    - Data Source: concepts/datasource.md
-    - Table: concepts/table.md
-    - Table Builder: concepts/tablebuilder.md
-    - Pipeline: concepts/pipeline.md
-    - Data Governance: concepts/governance.md
+    - Models:
+      - Intro: concepts/models.md
+      - Data Event: concepts/dataevent.md
+      - Table: concepts/table.md
+      - Table Builder: concepts/tablebuilder.md
+      - Pipeline: concepts/pipeline.md
+    - Stack: concepts/stack.md
+    - Variables: concepts/variables.md
     - Deployment (IaC): concepts/deployment.md
+    - CLI: concepts/cli.md
     - Spark Extension: concepts/spark.md
+    - Data Governance: concepts/governance.md
 
   - How-To Guides:
     - Users: guides/users.md
@@ -140,7 +143,6 @@ nav:
   - API Reference:
     - Models:
       - BaseModel: api/models/basemodel.md
-      - BaseResource: api/models/baseresource.md
       - DataEventHeader: api/models/dataeventheader.md
       - DataEvent: api/models/dataevent.md
       - DataProducer: api/models/dataproducer.md
@@ -149,21 +151,29 @@ nav:
         - EventDataSource: api/models/datasources/eventdatasource.md
         - TableDataSource: api/models/datasources/tabledatasource.md
       - Databricks:
+        - AccessControl: api/models/databricks/accesscontrol.md
         - api/models/databricks/cluster.md
         - api/models/databricks/directory.md
-        - Pipeline: api/models/databricks/pipeline.md
+        - api/models/databricks/grants.md
         - api/models/databricks/group.md
         - api/models/databricks/job.md
         - api/models/databricks/notebook.md
-        - api/models/databricks/permission.md
-        - ServicePrincipal: api/models/databricks/serviceprincipal.md
+        - Pipeline: api/models/databricks/pipeline.md
         - api/models/databricks/secret.md
+        - SecretAcl: api/models/databricks/secretacl.md
         - SecretScope: api/models/databricks/secretscope.md
-        - api/models/databricks/user.md
+        - ServicePrincipal: api/models/databricks/serviceprincipal.md
+        - ServicePrincipalRole: api/models/databricks/serviceprincipalrole.md
         - SqlQuery: api/models/databricks/sqlquery.md
+        - api/models/databricks/user.md
+        - UserRole: api/models/databricks/userrole.md
         - api/models/databricks/warehouse.md
-        - api/models/databricks/workspacefile.md
-      - Grants: api/models/grants.md
+        - WorkspaceFile: api/models/databricks/workspacefile.md
+      - Providers:
+        - DatabricksProvider: api/models/providers/databricks.md
+      - Resources:
+        - BaseResource: api/models/resources/baseresource.md
+        - PulumiResource: api/models/resources/pulumiresource.md
       - SQL:
           - api/models/sql/catalog.md
           - api/models/sql/column.md
@@ -175,6 +185,12 @@ nav:
           - TableJoin: api/models/sql/tablejoin.md
           - TableWindowFilter: api/models/sql/tablewindowfilter.md
           - api/models/sql/volume.md
+      - Stacks:
+          - Stack: api/models/stacks/stack.md
+          - PulumiStacK: api/models/stacks/pulumistack.md
+
+
+    - CLI: api/cli.md
     - Spark:
       - DataFrame:
         - has_column: api/spark/dataframe/has_column.md
