--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dynamic = ["version"]
 dependencies = [
 #    "databricks-sdk",
 #    "jsonref",
+    "inflect",
     "planck",
     "pulumi",
     "pulumi_databricks",
