--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -106,6 +106,7 @@ plugins:
             show_symbol_type_toc: true  # sponsors only
             signature_crossrefs: true
             summary: true
+  - mkdocs-video
 
 #  - sear
 #  - snippets
@@ -115,6 +116,7 @@ plugins:
 nav:
   - Get Started:
     - About: index.md
+    - Demos: demos.md
     - Installation: install.md
     - Quickstart: quickstart.md
 
@@ -134,8 +136,8 @@ nav:
     - Data Governance: concepts/governance.md
 
   - How-To Guides:
-    - Users: guides/users.md
     - Data Catalog: guides/catalog.md
+    - Users: guides/users.md
     - Data Table: guides/table.md
     - Data Pipeline: guides/pipeline.md
     - Compute: guides/compute.md
