--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ dependencies = [
     "pulumi_random",
     "pyyaml",
     "pydantic>=2",
+    "python-dateutil",
     "settus",
     "typer[all]",
 ]
