--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ dependencies = [
     "inflect",
     "planck",
     "pulumi",
-    "pulumi_databricks",
+    "pulumi_databricks>=1.36",  # required to monitor laktory usage
     "pulumi_random",
     "pyyaml",
     "pydantic>=2",
